# pd-matcher

./: .gitignore  .gitmodules  .pre-commit-config.yaml  DESIGN.md  LABELING_GUIDE.md  README.md  pyproject.toml
data/: PUBLISHERS.md  publisher_events.json  publisher_imprints.json
data/publishers/: README.md  publisher_events.json  publisher_imprints.json
data/stopwords/: french_stopwords.json  spanish_stopwords.json
docs/: COPYRIGHT_SCENARIOS.md  DESIGN.md  GLOSSARY.md  LABELING_GUIDE.md  LABELING_WORKFLOW.md  LEARNED_MATCHER.md  LEARNED_SCORER_DIAGNOSTIC.md  MATCHING_ARCHITECTURE.md  PHASE_WORKFLOW.md  USER_GUIDE.md  design.md  glossary.md  learned_scorer_diagnostic.md  matching-architecture.md  phase-workflow.md
docs/findings/: additional_entry_join_yield_2026-07-01.md  calibrator_refit_2026-07-03.md  cce_part_signal_2026-06-13.md  fit_calibrator_2026-06-07.md  floor_sweep_2026-06-07.md  in_pool_diagnostic_2026-06-07.md  lang_distribution_2026-06-08.md  learned_scorer_ab_2026-06-12.md  learned_scorer_decoys_2026-06-12.md  learned_scorer_decoys_round2_2026-06-13.md  learned_scorer_diagnostic_2026-05-29.md  learned_scorer_diagnostic_2026-05-30.md  learned_scorer_diagnostic_2026-05-31.md  learned_scorer_diagnostic_2026-06-12.md  learned_scorer_heldout_2026-06-13.md  learned_scorer_heldout_postvolume_2026-06-14.md  learned_scorer_tightening_2026-06-12.md  lowband_cross_field_2026-05-28.md  marc_246_prevalence_2026-06-08.md  marc_246_top1_diff_2026-06-08.md  nypl_join_analysis_2026-06-27.md  post_rebuild_join_2026-07-01.md  publisher_split_2026-07-03.md  range_regnum_characterize_2026-06-25.md  recall_miss_forensics_2026-07-03.md  renewal_join_recovery.md  renewal_matcher_eval_2026-07-01.md  separation_wild_test_2026-06-17.md  volume_signal_characterization_2026-06-13.md
docs/publisher-viz/: README.md  build-data.sh  data.js  index.html
docs/studies/: field-pairings.md  year-window.md
groundtruth/: .gitignore  LABELING_GUIDE.md  README.md  pyproject.toml
groundtruth/src/pd_groundtruth/: acquire.py  build_queue.py  build_queue_vault.py  cli.py  filters.py  label_vault.py  progress.py  review_db.py  vault_into_queue.py  vault_pair_resolver.py
groundtruth/src/pd_groundtruth/review/: app.py  filters.py  reasons.py  server.py  view.py
groundtruth/src/pd_groundtruth/review/templates/: base.html  card.html  empty.html  labels.html  not_found.html
groundtruth/tests/: test_acquire.py  test_build_queue.py  test_build_queue_vault.py  test_cli.py  test_filters.py  test_label_vault.py  test_manifest.py  test_progress.py  test_review_db.py  test_seed_vault.py  test_vault_into_queue.py  test_vault_pair_resolver.py  test_writer.py
groundtruth/tests/review/: test_reasons.py  test_relative_time.py  test_review_filters.py  test_routes.py  test_server.py  test_view.py
scripts/: additional_entry_join_measure.py  build_separation_test_queue.py  cce_part_signal.py  class_fold_scan.py  disagreement_scan.py  fit_calibrator.py  fit_learned_calibrator.py  learned_scorer_decoys.py  learned_scorer_diagnostic.py  learned_scorer_heldout.py  learned_scorer_tightening.py  nypl_join_analysis.py  post_rebuild_join_measure.py  publisher_split_ab.py  range_regnum_characterize.py  renewal_gate_measure.py  renewal_join_recovery.py  renewal_matcher_eval.py  separation_wild_test.py  volume_signal_characterization.py
scripts/blob_experiment/: README.md  blob_common.py  blob_measure.py  build_blob_idf.py  cheat_measure.py  cheat_probe.py  cheat_report.txt  pairs.csv  phase2.py  phase2_report.txt  report.txt  timing.txt
src/pd_groundtruth/: __init__.py  acquire.py  active_learning.py  active_score.py  active_select.py  build_corpus.py  build_queue.py  build_queue_vault.py  build_renewal_queue.py  cli.py  disk_guard.py  dump_vault_marcs.py  enrich_vault.py  filter.py  filters.py  harvest_renewal_pairs.py  label_vault.py  manifest.py  matcher_version.py  publish_linkage.py  review_db.py  sampling.py  vault_into_queue.py  vault_migration.py  vault_pair_resolver.py  writer.py
src/pd_groundtruth/review/: __init__.py  app.py  field_annotations.py  filters.py  label_entry.py  nav_history.py  reasons.py  relative_time.py  view.py
src/pd_matcher/: __init__.py  cli.py  logging_config.py  models.py  progress.py
src/pd_matcher/config/: __init__.py  loader.py  schemas.py
src/pd_matcher/copyright/: __init__.py  assessment.py  coverage.py  facts.py  inference.py  predicates.py  rules.py  status.py
src/pd_matcher/eval/: __init__.py  feature_matrix.py  ground_truth.py  metrics.py  regression.py
src/pd_matcher/index/: __init__.py  builder.py  codec.py  keys.py  lookup.py  store.py
src/pd_matcher/match/: __init__.py  claimant_routing.py  evidence.py  idf.py  pairing_compiler.py  pairings.py  pipeline.py  prepare.py  result.py
tests/: __init__.py
tests/fixtures/: additional_entry_reg.xml  additional_entry_ren.tsv  harvest_vault.jsonl  range_regnum_reg.xml  range_regnum_ren.tsv  regnum_variant_reg.xml  regnum_variant_ren.tsv  sibling_renewal_reg.xml  sibling_renewal_ren.tsv  tiny.marcxml  tiny_reg.xml  tiny_ren.tsv  tiny_ren_from_db.tsv  year_join_reg.xml  year_join_ren.tsv
tests/groundtruth/: test_acquire.py  test_active_learning.py  test_active_score.py  test_active_select.py  test_build_corpus.py  test_build_queue.py  test_build_queue_vault.py  test_build_renewal_queue.py  test_cli.py  test_cli_active_queue.py  test_disk_guard.py  test_dump_vault_marcs.py  test_enrich_vault.py  test_filter.py  test_harvest_renewal_pairs.py  test_label_vault.py  test_manifest.py  test_matcher_version.py  test_progress.py  test_publish_linkage.py  test_review_db.py  test_sampling.py  test_seed_vault.py  test_vault_into_queue.py  test_vault_migration.py  test_vault_pair_resolver.py  test_writer.py
tests/integration/: test_cli_smoke.py  test_index_real_sources.py  test_pool_smoke.py  test_real_sources_smoke.py
tests/regression/: __init__.py  baseline.json  test_regression.py  update_baseline.py
tests/unit/: __init__.py  test_cli.py  test_logging_config.py  test_models.py  test_progress.py
(+163 files in other folders)
