[project]
name = "pd-matcher"
version = "0.1.0"
description = "Match MARC XML records against NYPL's transcription of the LoC Catalog of Copyright Entries to determine public-domain status."
authors = [
    {name = "jstroop"},
]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "lxml>=5.3.0",
    "rapidfuzz>=3.10.0",
    "lmdb>=1.5.1",
    "PyStemmer>=2.2.0.3",
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
    "msgspec>=0.21.1",
    "ftfy>=6.3.1",
]

[project.scripts]
pd-matcher = "pd_matcher.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
fmt = "ruff format src tests"
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
typecheck = "mypy src tests"
test = "pytest"
gates = {composite = ["fmt", "lint", "typecheck", "test"]}

[tool.pdm.build]
includes = [
    "src/pd_matcher",
    "src/pd_matcher/config/defaults/*.yaml",
    "src/pd_matcher/normalize/stopwords_data/*.json",
]
package-dir = "src"
source-includes = [
    "src/pd_matcher/config/defaults/*.yaml",
    "src/pd_matcher/normalize/stopwords_data/*.json",
]

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src", "tests"]
disallow_any_explicit = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["Stemmer"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
    "C4",
    "PIE",
    "PT",
    "RET",
]
ignore = ["PT013"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B010", "B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--cov=src/pd_matcher --cov-branch --cov-fail-under=100 --cov-report=term-missing -m 'not slow'"
markers = [
    "slow: long-running integration tests (excluded from default run)",
]

[tool.coverage.run]
branch = true
source = ["src/pd_matcher"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise AssertionError\\(.unreachable.\\)",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "hypothesis>=6.115.0",
    "types-PyYAML>=6.0.12",
    "lxml-stubs>=0.5.1",
    "pre-commit>=4.6.0",
]
