[project]
name = "pd-matcher"
version = "0.1.0"
description = "Match MARC XML records against NYPL's transcription of the LoC Catalog of Copyright Entries to determine public-domain status, plus the labeling tooling used to build the project's ground-truth corpus."
authors = [
    {name = "jstroop"},
]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
dependencies = [
    "lxml>=5.3.0",
    "rapidfuzz>=3.10.0",
    "lmdb>=1.5.1",
    "PyStemmer>=2.2.0.3",
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
    "msgspec>=0.21.1",
    "ftfy>=6.3.1",
]

[project.optional-dependencies]
acquire = [
    "requests>=2.32.0",
]
review = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
]
ml = [
    "lightgbm>=4.5.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
]
all = [
    "pd-matcher[acquire,review,ml]",
]

[project.scripts]
pd-matcher = "pd_matcher.cli:app"
pd-groundtruth = "pd_groundtruth.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
fmt = "ruff format src tests"
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
typecheck = "mypy src tests"
test = "pytest"
webui = "pytest -m webui -o addopts= --no-header"
regression = "pytest -s -m regression --no-cov tests/regression"
regression-baseline = "python tests/regression/update_baseline.py"
fit-calibrator = "python scripts/fit_calibrator.py"
gates = {composite = ["fmt", "lint", "typecheck", "test"]}

[tool.pdm.build]
includes = [
    "src/pd_matcher",
    "src/pd_matcher/py.typed",
    "src/pd_matcher/config/defaults/*.yaml",
    "src/pd_matcher/normalize/stopwords_data/*.json",
    "src/pd_groundtruth",
    "src/pd_groundtruth/review/templates/*.html",
]
package-dir = "src"

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src", "tests"]
disallow_any_explicit = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["Stemmer"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
    "C4",
    "PIE",
    "PT",
    "RET",
]
ignore = ["PT013"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B010", "B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--cov=src/pd_matcher --cov=src/pd_groundtruth --cov-branch --cov-fail-under=100 --cov-report=term-missing -m 'not slow and not regression and not webui'"
markers = [
    "slow: long-running integration tests (excluded from default run)",
    "regression: index-dependent end-to-end eval gate (excluded from default run)",
    "webui: thin FastAPI route + template smoke tests (excluded from default run; runs via `pdm run webui`)",
]

[tool.coverage.run]
branch = true
source = ["src/pd_matcher", "src/pd_groundtruth"]
omit = [
    "src/pd_groundtruth/review/app.py",
    "src/pd_groundtruth/review/server.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise AssertionError\\(.unreachable.\\)",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "hypothesis>=6.115.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.32.0",
    "lxml-stubs>=0.5.1",
    "pre-commit>=4.6.0",
    "responses>=0.25.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "numpy>=2.0.0",
]
