[project]
name = "pd-groundtruth"
version = "0.1.0"
description = "Acquire and filter Princeton MARC dumps into a public-domain ground-truth corpus."
authors = [
    {name = "jstroop"},
]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
dependencies = [
    "requests>=2.32.0",
    "lxml>=5.3.0",
    "typer[all]>=0.15.0",
    "msgspec>=0.21.1",
    "pd-matcher @ file:///${PROJECT_ROOT}/..",
]

[project.scripts]
pd-groundtruth = "pd_groundtruth.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
fmt = "ruff format src tests"
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
typecheck = "mypy src tests"
test = "pytest"
gates = {composite = ["fmt", "lint", "typecheck", "test"]}

[tool.pdm.build]
includes = ["src/pd_groundtruth"]
package-dir = "src"

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src", "tests"]
disallow_any_explicit = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_reexport = true

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
    "C4",
    "PIE",
    "PT",
    "RET",
]
ignore = ["PT013"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B010", "B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--cov=src/pd_groundtruth --cov-branch --cov-fail-under=90 --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src/pd_groundtruth"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-requests>=2.32.0",
    "responses>=0.25.0",
    "lxml-stubs>=0.5.1",
]
